Quake II 5.21 to 5.22:
- Provide a fallback if SDL2s relative mouse mode
  cannot be activated.

Quake II 5.20 to 5.21:
- Fix a bug regaring mouse key handling (reported 
  by phenixia2003)
- Correct MS Windows builds. Add official support
  for Win64. This still needs some testing.
- Allow to shutdown the client by pressing ctrl-c
  or sending SIGTERM. Unix / Linux only.

Quake II 5.11 to 5.20
- Integrate the refresher into the client and
  remove QGL. This means that ref_gl.so is gone
  and libGL is now linked like every other lib.
  (by Alejandro Ricoveri)
- Port the client to SDL 2.0. The newer SDL version
  solves some long standing problems, like broken
  keyboard layouts and non working SDL sound on
  Windows. While SDL 2.0 is enabled by default,
  one can switch back to SDL 1.2 by editing the
  Makefile.
- OS X support was put to hold. While OS X support
  is nice to have, non of the deveolpers has
  interest in maintaining it. Until someone steps
  up and takes responsibility, no OS X versions
  will be released.

Quake II 5.10 to 5.11
- A lot of bugfixes.
- Videos are scaled to 4:3 to prevent distortions.
- Another sound system cleanup.

Quake II 5.00 to 5.10
- Support for OS X. (by W. Beser)
- Correct field of view handling (by Ricardo Garci)
- Many improvements to the mouse release code (by svdijk)
- Scrolling save / load menus (by svdijk)

Quake II 4.21 to 5.00
- Backport to Microsoft Windows.
- Support for OpenBSD. (by Jonathan Gray)
- Aspect ration can be set via the video menu.
- A better random number generator.
- The SDL sound driver is now selectable by
  "s_sdldriver".

Quake II 4.20 to 4.21
- Fix several segfaults with OpenAL. (reported by 
  Joran and mxmvasilyev0)
- Add a file CONTRIBUTE.
- Some minor changes to the Makefile.

Quake II 4.10 to 4.20
- Add an options framework to allow disabling most
  option features (OGG/Vorbis, ZIP file loading,
  OpenAL, etc) at compile time.
- Integrate OpenAL support, enabling surround sound