@@ -1,6 +1,8 @@
 Quake II 5.21 to 5.22:
 - Provide a fallback if SDL2s relative mouse mode
   cannot be activated.
+- Add support for MSAA through the gl_msaa_samples
+  cvar.
 
 Quake II 5.20 to 5.21:
 - Fix a bug regaring mouse key handling (reported 
